# DiffDRR

./: .gitattributes  .gitconfig  .gitignore  CITATION.cff  LICENSE  MANIFEST.in  Makefile  README.md  compliance_testing.ipynb  environment.yml  index.html  pyproject.toml  requirements.txt  robots.txt  search.json  settings.ini  setup.py  sitemap.xml  test_environment.py
.github/workflows/: CI.yml  deploy.yaml  greetings.yml  python-package-conda.yml  test.yaml
_proc/: index.ipynb  sidebar.yml
_proc/_docs/: index.html  search.json  (+1 more)
api/: data.html  detector.html  drr.html  metrics.html  pose.html  registration.html  renderers.html  utils.html  visualization.html
diffdrr/: __init__.py  _modidx.py  camera.py  carm.py  data.py  detector.py  drr.py  meta.yaml  metrics.py  pose.py  projectors.py  registration.py  renderers.py  siddon.py  utils.py  visualization.py
docs/: Makefile  conf.py  index.md  index.rst  make.bat
experiments/: README.md  gif.py  registration.ipynb  registration.py
notebooks/: DRR.ipynb  _quarto.yml  example_drrs.ipynb  finite-diff.ipynb  gpu.ipynb  index.ipynb  metrics.ipynb  nbdev.yml  optimization_plot.ipynb  optimize.ipynb  plotting.ipynb  siddon2D.ipynb  siddon_example.ipynb  sidebar.yml  spacing_issue.ipynb  spherical.ipynb  timing.ipynb  vectorize.ipynb  vectorize_prototype.ipynb
src/: __init__.py  drr.py
test/: test_data.py  test_drr.py  test_xray.py
tutorials/: geometry.html  introduction.html  metamorphasis.html  metrics.html  optimizers.html  reconstruction.html  spherical.html  timing.html  trilinear.html  visualization.html
(+19366 files in other folders)
